301-ISTIO/start_expose_gateway_vs/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld-virtualservice
spec:
  hosts:
  - "*"
  gateways:
  - doumx-gateway
  http:
  - route:
    - destination:
        host: doumx-service
